--- a/i3/config
+++ b/i3/config
@@ -34,6 +34,10 @@ bindsym $mod+d exec --no-startup-id rofi -show drun
 bindsym $mod+space exec --no-startup-id rofi -show combi
 bindsym $mod+Tab exec --no-startup-id rofi -show window
 
+bindsym $mod+Shift+b exec --no-startup-id ~/.config/rofi/rofi-bluetooth.sh
+bindsym $mod+Shift+w exec --no-startup-id ~/.config/rofi/rofi-wifi.sh
+bindsym $mod+Shift+p exec --no-startup-id ~/.config/rofi/rofi-power.sh
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:Hack Nerd Font 11
