--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -55,7 +55,7 @@ alert = ${colors.red}
 disabled = ${colors.subtext1}
 
 [bar/toph]
-monitor = eDP-1
+monitor = ${env:MONITOR:}
 width = 100%
 height = 28pt
 radius = 0
